Add label para todos os cadastros de contatos. Add inputs de (estado/país) no cadastro de endereço.

--- a/src/main/resources/META-INF/MessageBundle_pt_BR.properties
+++ b/src/main/resources/META-INF/MessageBundle_pt_BR.properties
@@ -103,19 +103,19 @@ action_ask_confirmation=Sim, tenho certeza
 ####################################################################################################
 ##################################### REGISTER - BEGIN #############################################
 
-model_employee=Empregado
-model_provider=Fornecedor
-model_trainee=Estagiario
+model_employee=Empregados
+model_provider=Fornecedores
+model_trainee=Estagiários
 model_simple=Simples
-model_costumer=Cliente
-model_company=Empresa
+model_costumer=Clientes
+model_company=Empresas
 
 model_fancy_name=Nome Fantasia
-model_company_name=Razao Social
-model_area_actuation=Area de Atuacao
+model_company_name=Razão Social
+model_area_actuation=Àrea de Atuação
 model_name=Nome
 model_lastname=SobreNome
-model_genre=Genero
+model_genre=Genêro
 model_genre_male=Masculino
 model_genre_female=Feminino
 model_birth=Data de Nascimento
@@ -280,6 +280,7 @@ address_number_complemention=NÃºmero / Compl.
 address_neighborhood=Bairro
 address_city=Cidade
 address_state=Estado
+address_country=País
 address_type_residential=Residencial
 address_type_commercial=Comercial
 ##################################### ADDRESS - END   ##############################################
@@ -291,23 +292,23 @@ address_type_commercial=Comercial
 list_title_simple=Lista de Contatos Simples
 list_title_company=Lista de Empresas
 list_title_employee=Lista de Empregados
-list_title_trainee=Lista de Estagiarios
+list_title_trainee=Lista de Estagiários
 list_title_provider=Lista de Fornecedores
 list_title_costumer=Lista de Clientes
 
 model_title_simple=Cadastro - Simples
 model_title_company=Cadastro - Empresa
 model_title_employee=Cadastro - Empregado
-model_title_trainee=Cadastro - Estagiario
+model_title_trainee=Cadastro - Estagiário
 model_title_provider=Cadastro - Fornecedor
 model_title_costumer=Cadastro - Cliente
 
-info_title_simple=Informacoes de Contato Simples
-info_title_company=Informacoes de Empresa
-info_title_employee=Informacoes de Empregado
-info_title_trainee=Informacoes de Estagiario
-info_title_provider=Informacoes de Fornecedor
-info_title_costumer=Informacoes de Cliente
+info_title_simple=Informações de Contato Simples
+info_title_company=Informações de Empresa
+info_title_employee=Informações de Empregado
+info_title_trainee=Informações de Estagiário
+info_title_provider=Informações de Fornecedor
+info_title_costumer=Informações de Cliente
 
 financial_banking_bank_title=Bancos - Dados Bancários
 financial_banking_checking_account_title=Conta Corrente - Dados Bancários
