Add opção para exportar para excel contatos.

--- a/src/main/resources/META-INF/MessageBundle_pt_BR.properties
+++ b/src/main/resources/META-INF/MessageBundle_pt_BR.properties
@@ -112,7 +112,7 @@ model_company=Empresas
 
 model_fancy_name=Nome Fantasia
 model_company_name=Razão Social
-model_area_actuation=Àrea de Atuação
+model_area_actuation=Área de Atuação
 model_name=Nome
 model_lastname=SobreNome
 model_genre=Genêro
@@ -244,9 +244,9 @@ watermark_model_cash_account_observations=Adicione uma breve descrição sobre est
 
 model_insert_fancy_name=Insira nome fantasia
 model_insert_company_name=Insira razÃ£o social
-model_insert_area_actuation=Insira area de atuaÃ§Ã£o
+model_insert_area_actuation=Insira área de atuaÃ§Ã£o
 model_insert_name=Insira o nome
-model_insert_lastname=Insira o sobreNome
+model_insert_lastname=Insira o sobrenome
 model_insert_fathername=Insira nome do pai
 model_insert_mothername=Insira nome da mï¿½e
 model_insert_nationality=Insira nacionalidade
