--- a/src/main/resources/META-INF/MessageBundle_pt_BR.properties
+++ b/src/main/resources/META-INF/MessageBundle_pt_BR.properties
@@ -227,13 +227,14 @@ watermark_model_bank_number_account=Nº da conta
 watermark_model_opening=Data de cobertura
 watermark_model_start=Data de início
 watermark_model_start_balance=Saldo inicial
+watermark_model_bank_identifier=Código identificador da instituição
 watermark_model_bank_credit_card=Nº do cartão de crédito 
 watermark_model_bank_maturity_day=Dia de vencimento
 watermark_model_bank_limit_time=Tempo limite
 watermark_model_origin_account=Conta de origem
 watermark_model_target_account=Conta de destino
 watermark_model_transfer_name=Insira um nome para a sua transferência.
-watermark_model_bank_observations=Adicione uma breve descrição sobre este banco.
+watermark_model_bank_observations=Breve descrição sobre esta instituição.
 watermark_model_checking_account_observations=Adicione uma breve descrição sobre esta conta corrente.
 watermark_model_expense_observations=Adicione uma breve descrição sobre esta despesa.
 watermark_model_income_observations=Adicione uma breve descrição sobre esta receita.
